Injiweb 1605 - Fixed architect review comments
Injiweb 1605

Signed-off-by: Gurpreet41082 <gurpreet.kaur@thoughtworks.com>